--- a/Aula01/ex001.html
+++ b/Aula01/ex001.html
@@ -19,7 +19,8 @@
     <script>
       // alert('Minha primeira mensagem')
       // window.confirm('Ola?')
-      // window.prompt('Qual seu nome?')
+      var nome = window.prompt('Qual seu nome?')
+      window.alert ('É um prezer lhe conhecer '+nome)
     </script>
 </body>
 </html>
