--- a/EXPRATICO/ex08/index.html
+++ b/EXPRATICO/ex08/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
-    <title>Hora do dia</title>
+    <title>Jogos Retro</title>
 </head>
 <body>
     <header>
-        <h1>TITULO</h1>
+        <h1>Jogos retro usando JS</h1>
     </header>
     <section>
-        <div id="conteudo">
+        <div id="gm1">
+            <iframe src="https://editor.p5js.org/Guilherme_dev/full/IdciU_RQf" height="450px" width="600px"></iframe>
         </div>
-        <div id='conteudo2'>
+        <div id='gm2'>,
+            <iframe src="https://editor.p5js.org/Guilherme_dev/full/HFiRBi1p5" height="450" width="500px"></iframe>
         </div>
     </section>
     <footer>
-        <p>&copy; Guilherme</p>
+        <a href="http://guilherme-barbosa-rodrigues.github.io/Portifolio" target="_blank">&copy; Guilherme</a>
     </footer>
     <script src="script.js"></script>
 </body>
